Final config swagger + map methods in Auth Controller
